@@ -9,7 +9,7 @@
 - name: configure burp client
   template:
     src: burp.conf.j2
-    dest: /etc/burp/burp.conf
+    dest: "{{ burp_server_etc }}/burp.conf"
 
 - name: add local client
   template:
