@@ -1,7 +1,7 @@
 # simple config for burp_ca
 
 RANDFILE                = /dev/urandom
-CA_DIR                  = /etc/burp/CA
+CA_DIR                  = {{ burp_server_etc }}/CA
 
 
 [ ca ]
